<resources>
    <string name="app_name">BiosApp</string>
    <string name="textview">TextView</string>
    <string name="reserveren">reserveren</string>
    <string name="title_activity_films_tab">FilmsTab</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_search">Zoeken...</string>
    <string name="action_search_results">Resultaten voor</string>

    <string name="payment">Betalen</string>
    <string name="payment_method">Betalingsmethode:</string>
    <string name="cancel">Annuleren</string>
    <string name="validate_payment">Betaling bevestigen</string>
    <string name="bank">Bank</string>
    <string name="select_chair">Selecteer deze zitplaats(en)</string>
    <string name="seats">Zitplaats(en)</string>
    <string name="no_seats_selected">Geen zitplaats geselecteerd</string>
    <string name="selected">geselecteerd</string>
    <string name="select_seat_description">Selecteer hieronder uw gewenste zitplaats(en).</string>
    <string name="tickets">Tickets</string>
    <string name="personal_data">Persoonsgegevens</string>
    <string name="chair">Stoel</string>
    <string name="firstname">Voornaam</string>
    <string name="lastname">Achternaam</string>
    <string name="validate_ticket_data">Bevestigen</string>
    <string name="feedback_message_title">Feedback ontvangen</string>
    <string name="feedback_message_content">Bedankt voor uw feedback!</string>
    <string name="ok">Ok</string>
    <string name="feedback_error_title">Fout in verstuurde feedback</string>
    <string name="firstname_notfilled">De voornaam is niet ingevuld.</string>
    <string name="lastname_notfilled">De achternaam is niet ingevuld</string>
    <string name="improve_feedback">Deze fouten dienen verbeterd te worden.</string>
    <string name="payment_succesful">Betaling geslaagd!</string>
    <string name="show_ticket">Ga naar ticket</string>
    <string name="return_main">Ga naar hoofdscherm</string>
    <string name="payment_progress">Bezig met betalingsprocedure ...</string>
    <string name="ticket">Ticket</string>
    <string name="boeken">Boek nu!</string>
    <string name="title_activity_contact">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="feedback_geven">Feedback geven</string>
    <string name="cinema">Bioscoop</string>
    <string name="name_cinema">Bioscoop Breda</string>
    <string name="street">Lovensdijkstraat 61</string>
    <string name="netherlands">Nederland</string>
    <string name="contact_methods">Contactmethoden</string>
    <string name="phone_contact">Telefoon:</string>
    <string name="email_contact">E-mailadres:</string>
    <string name="phonenumber">076 123 4567</string>
    <string name="emailadres">bioscoop@avans.nl</string>
    <string name="reachability">Bereikbaarheid</string>
    <string name="reachability_explaination">Onze bioscoop kan met de auto, fiets en het de bus bereikt worden. Naast de bioscoop staat een gratis parkeerplaats  voor auto\'s en fietsen. Ook bevindt er direct naast de bioscoop een bushalte.</string>
    <string name="postalcode">4818 TJ Breda</string>
    <string name="route">Routebeschrijving</string>
    <string name="activity_feedback">Feedback</string>
    <string name="email_review">E-mailadres</string>
    <string name="message_review">Bericht</string>
    <string name="send">Verzenden</string>
    <string name="default_feedback_message"> </string>
    <string name="contactdata">Contactgegevens</string>
    <string name="emailadres_notfilled">Het e-mailadres is niet ingevuld.</string>
    <string name="message_notfilled">Het bericht is niet ingevuld.</string>
    <string name="TicketSelectionButton">Doorgaan</string>
</resources>
