<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thomas.biosapp.Controllers.Unused.PaymentFinishedActivity">

    <TextView
        android:id="@+id/textViewPaymentSuccesful"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/payment_succesful"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonShowTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/show_ticket"
        app:layout_constraintEnd_toEndOf="@+id/textViewPaymentSuccesful"
        app:layout_constraintStart_toStartOf="@+id/textViewPaymentSuccesful"
        app:layout_constraintTop_toBottomOf="@+id/textViewPaymentSuccesful" />

    <Button
        android:id="@+id/buttonReturnMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/return_main"
        app:layout_constraintEnd_toEndOf="@+id/buttonShowTicket"
        app:layout_constraintStart_toStartOf="@+id/buttonShowTicket"
        app:layout_constraintTop_toBottomOf="@+id/buttonShowTicket" />
</android.support.constraint.ConstraintLayout>
