<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thomas.biosapp.Controllers.Payments.PaymentActivity">

    <TextView
        android:id="@+id/textViewPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/payment"
        android:textSize="@dimen/activity_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewChoosePayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="12dp"
        android:text="@string/payment_method"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPayment" />

    <ImageView
        android:id="@+id/imageViewPayPal"
        android:layout_width="@android:dimen/notification_large_icon_height"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/textViewChoosePayment"
        app:layout_constraintTop_toBottomOf="@+id/textViewChoosePayment"
        app:srcCompat="@drawable/paypal_icon" />

    <ImageView
        android:id="@+id/imageViewIDeal"
        android:layout_width="@android:dimen/notification_large_icon_height"
        android:layout_height="@android:dimen/notification_large_icon_width"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/imageViewPayPal"
        app:layout_constraintTop_toTopOf="@+id/imageViewPayPal"
        app:srcCompat="@drawable/ideal_logo" />

    <Button
        android:id="@+id/buttonCancelPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonConfirmPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/validate_payment"
        app:layout_constraintBottom_toTopOf="@+id/buttonCancelPayment"
        app:layout_constraintEnd_toEndOf="@+id/buttonCancelPayment"
        app:layout_constraintStart_toStartOf="@+id/buttonCancelPayment" />

    <Spinner
        android:id="@+id/spinnerBank"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="@+id/textViewBank"
        app:layout_constraintTop_toBottomOf="@+id/textViewBank" />

    <TextView
        android:id="@+id/textViewBank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bank"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageViewPayPal"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPayPal" />
</android.support.constraint.ConstraintLayout>
