<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thomas.biosapp.Controllers.Contact.FeedbackActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/activity_feedback"
                android:textSize="@dimen/activity_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/ratingBarCinema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:isIndicator="false"
                android:numStars="5"
                android:rating="5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewFeedback" />

            <TextView
                android:id="@+id/textViewMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/message_review"
                android:textSize="@dimen/contact_big"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/editTextEmailadres"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmailadres" />

            <TextView
                android:id="@+id/textViewFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/firstname"
                android:textSize="@dimen/contact_big"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBarCinema" />

            <EditText
                android:id="@+id/editTextEmailadres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="@dimen/contact_normal"
                app:layout_constraintEnd_toEndOf="@+id/editTextLastName"
                app:layout_constraintStart_toStartOf="@+id/textViewEmailadres"
                app:layout_constraintTop_toBottomOf="@+id/textViewEmailadres" />

            <TextView
                android:id="@+id/textViewLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/lastname"
                android:textSize="@dimen/contact_big"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/editTextFirstName"
                app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

            <Button
                android:id="@+id/buttonSendFeedback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/send"
                app:layout_constraintEnd_toEndOf="@+id/editTextMessage"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextMessage"
                app:layout_constraintTop_toBottomOf="@+id/editTextMessage" />

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="@dimen/contact_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewFirstName"
                app:layout_constraintTop_toBottomOf="@+id/textViewFirstName" />

            <EditText
                android:id="@+id/editTextMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/default_feedback_message"
                android:textSize="@dimen/contact_normal"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmailadres"
                app:layout_constraintStart_toStartOf="@+id/textViewMessage"
                app:layout_constraintTop_toBottomOf="@+id/textViewMessage" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="@dimen/contact_normal"
                app:layout_constraintEnd_toEndOf="@+id/editTextFirstName"
                app:layout_constraintStart_toStartOf="@+id/textViewLastName"
                app:layout_constraintTop_toBottomOf="@+id/textViewLastName" />

            <TextView
                android:id="@+id/textViewEmailadres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/email_review"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/contact_big"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/editTextLastName"
                app:layout_constraintTop_toBottomOf="@+id/editTextLastName" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
